# py-rabbit-opensuse-org

./: .gitignore  MANIFEST.in  README.rst  api.html  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly-smoke-test.yml  release.yml
_sources/: api.rst.txt
scripts/: generate_backend.py
source/: api.rst  conf.py  index.rst
src/py_rodo/: __init__.py  callback.py  cli.py  config.py  types.py
src/py_rodo/backends/: __init__.py  dataclassy.py  pydantic.py
tests/: conftest.py  test_dataclassy_backend.py  test_pydantic_backend.py
