[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]
ignore = [
    # too long lines…
    "E501"
]

[tool.ruff]
src = ["src", "tests", "source"]

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
